restructured packages and some code clean-up. Added a launcher icon

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -25,7 +25,7 @@
         android:label="News" >
         <argument
             android:name="article"
-            app:argType="com.ebenezer.gana.newsapp.models.Article" />
+            app:argType="com.ebenezer.gana.newsapp.data.models.Article" />
     </fragment>
     <fragment
         android:id="@+id/navigation_savedNewsFragment"
